# IVA_compiler_runner

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_ui.h  open_docs.sh  run.sh
cfg/: pickle_converter.cfg
compiler_core/: CMakeLists.txt  make_compiler_core.sh
compiler_core/include/: aliases.h  compilerCore.h  mapSize.h  module.h  modules.h  pipeline.h  programFilesDescriptor.h  timer.h
compiler_core/include/modules/: addressCheckerModule.h  compilerRunnerModule.h  pickleConverterModule.h  programComparatorModule.h
compiler_core/include/settings/: addrCheckerSettings.h  metadataCreatorSettings.h  pickleConverterSettings.h
compiler_core/lib/: CMakeLists.txt  module.cpp  path.cpp
compiler_core/src/: CMakeLists.txt
compiler_core/src/modules/address_checker/: CMakeLists.txt  addressCheckerModule.cpp
compiler_core/src/modules/compiler_runner/: CMakeLists.txt
compiler_core/src/modules/metadata_creator/: metadataCreatorModule.cpp
compiler_core/src/modules/pickle_converter/: CMakeLists.txt  converter.py
gui/: CMakeCache.txt  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make_gui_interface.sh
gui/lib/: CMakeLists.txt
gui/lib/configurator/: CMakeLists.txt  configurator.cpp  configurator.h
gui/lib/logger/: CMakeLists.txt  logger.cpp  logger.h
include/: compile_errors.h  compilerCore.h  deviceTypes.h  jsonHandler.h  log_config.h  mapSize.h  module.h  moduleExitStatus.h  modules.h  path.h  pipeline.h  runner_errors.h  settings_config.h  syntax_sugar.h  tpuDescriptor.h  wrong_fmt_captures.h
include/modules/: addressCheckerModule.h  compilerRunnerModule.h  metadataCreatorModule.h  pickleConverterModule.h
include/settings/: addrCheckerSettings.h  compilerRunnerSettings.h  fileCheckerSettings.h  globalSettings.h  jsonConverterSettings.h  metadataCreatorSettings.h  pickleConverterSettings.h  programComparatorSettings.h  programRunnerSettings.h
lib/: CMakeLists.txt  compilerCore.cpp  jsonHandler.cpp  module.cpp  path.cpp  pipeline.cpp  timer.cpp
lib/buffers/: settingsbuffer.cpp  settingsbuffer.h
lib/compiler_core/include/: compileStatus.h  compilerCore.h  module.h  moduleExitStatus.h  modules.h  pipeline.h  tpuDescriptor.h
lib/compiler_core/include/modules/: addressCheckerModule.h  compilerRunnerModule.h  metadataCreatorModule.h  optimizationChangerModule.h  pickleConverterModule.h  programComparatorModule.h
lib/compiler_core/include/settings/: addrCheckerSettings.h  compilerRunnerSettings.h  globalSettings.h  metadataCreatorSettings.h  optimizationChangerSettings.h  pickleConverterSettings.h  programComparatorSettings.h  programRunnerSettings.h
lib/compiler_core/lib/: compilerCore.cpp  jsonHandler.cpp  module.cpp  pipeline.cpp
lib/compiler_core/src/modules/address_checker/: addressCheckerModule.cpp
lib/compiler_core/src/modules/compiler_runner/: compilerRunnerModule.cpp  runner.sh
lib/compiler_core/src/modules/metadata_creator/: metadataCreatorModule.cpp
lib/compiler_core/src/modules/optimization_changer/: optimizationChangerModule.cpp
lib/compiler_core/src/modules/pickle_converter/: pickleConverterModule.cpp
lib/compiler_core/src/modules/program_comparator/: programComparatorModule.cpp
lib/compiler_settings_descriptor/: compiler_settings_desc.cpp  compiler_settings_desc.h
lib/controllers/: statusbar_controller.cpp  statusbar_controller.h
lib/correct_checkers/: compile_runner_preprocessor.cpp  compile_runner_preprocessor.h  correct_checker.cpp  correct_checker.h
lib/runner_core/: runner_settings.h  runnercore.cpp  runnercore.h
lib/runner_core/local_runner/: localrunner.cpp  localrunner.h
lib/runner_core/remote_runner/: remoterunner.cpp  remoterunner.h
lib/runner_core/tensor_creator/: tensorcreator.cpp  tensorcreator.h
lib/thread_api/: interrupt_buffer.cpp  interrupt_buffer.h  progressbar_buffer.cpp  progressbar_buffer.h  statusbuffer_cache.cpp  statusbuffer_cache.h
src/modules/: CMakeLists.txt
src/modules/address_checker/: addressCheckerModule.cpp
src/modules/compiler_runner/: compilerRunnerModule.cpp
src/modules/metadata_creator/: CMakeLists.txt  metadataCreatorModule.cpp
src/modules/pickle_converter/: converter.py  pickleConverterModule.cpp
src/modules/pickle_converter/lib/: arg_parser.py  logger.py
src/modules/program_comparator/: CMakeLists.txt  programComparatorModule.cpp
ui/: compiler_settings_dialog.cpp  compiler_settings_dialog.h  compiler_settings_dialog_ui.h  mainwindow.ui  remote_auth_dialog.cpp  remote_auth_dialog.h  remote_auth_dialog_ui.h  warning_settings_dialog.cpp  warning_settings_dialog.h  warning_settings_dialog_ui.h  welcome_dialog.ui  welcome_form.cpp  welcome_form.h  welcome_form_ui.h  welcome_from_ui.h
